# todo-overlay

./: .env.example  .env.local.example  .gitignore  AUTO_UPDATE_SETUP.md  CHANGELOG.md  CHANGELOG.md.bak  CONTRIBUTING.md  DOCKER_TEST_RESULTS.md  DOCUMENTATION.md  FEATURE_FLAGS.md  NEXT_STEPS.md  README.md  SESSION_RECAP.md  UPDATER.md  backdrop.html  codecov.yml  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
.github/: GITHUB_ACTIONS_SETUP.md  SEO_CHECKLIST.md  TOPICS.md  dependabot.yml
.github/assets/: README.md
.github/scripts/: extract-changelog.sh
.github/workflows/: ci.yml  deploy-landing.yml  release.yml
docs/: AUTO_UPDATE.md  GENERER_CLES.md  README.md  RELEASE_WORKFLOW.md  TESTING_ONBOARDING.md
docs/archive/: agent-context.md  cloud-storage-debug-2026-02.md
docs/deployment/: ci-cd.md  code-signing.md
docs/features/: CHANGELOG_SYSTEM.md  auto-update.md  cloud-sync.md
scripts/: check-supabase-schema.sql  fix-schema-quick.sql  generate-signing-keys.sh  release.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: accessibility.rs  changelog.rs  commands.rs  lib.rs  reminder.rs  shortcuts.rs  storage.rs  tray.rs  updater.rs  window.rs
src/components/: changelog-dialog.tsx  history-view.tsx  icon-picker.tsx  settings-menu.tsx  settings-page.tsx  statistics-page.tsx  todo-create-form.tsx  todo-input.tsx  todo-list.tsx  update-banner.tsx  update-download-dialog.tsx
src/components/auth/: AuthForm.tsx
src/components/onboarding/: Onboarding.tsx
src/components/settings/: about-settings.tsx  appearance-settings.tsx  danger-settings.tsx  data-settings.tsx  general-settings.tsx  labels-settings.tsx  language-settings.tsx  shortcuts-settings.tsx  sync-settings.tsx
src/components/storage/: MigrationDialog.tsx  StorageSettings.tsx  SyncStatusIndicator.tsx  index.ts
src/config/: features.ts
src/hooks/: use-window-behavior.ts  useSoundEffects.ts  useWindowMode.ts
src/i18n/: index.ts
src/lib/: tauri.ts
src/store/: use-todo-store.ts  use-update-store.ts
src/test/: setup.ts
src/types/: todo.ts
supabase/: README.md  SETUP.md  kong.yml  schema.sql
supabase/init/: 01-schema.sql
web/: README.md
web/landing/: .dockerignore  CORRECTIONS.md  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/updates/: README.md  releases.json
(+31 files in other folders)
