[package]
name = "blinkdo"
version = "0.3.0"
description = "Your todos appear in the blink of an eye - lightning-fast todo app with instant keyboard access"
authors = ["Simon Fessy"]
license = "MIT"
repository = "https://github.com/simcmoi/blinkdo"
homepage = "https://simcmoi.github.io/blinkdo"
edition = "2021"
rust-version = "1.77.2"
keywords = ["todo", "task-manager", "productivity", "overlay", "tauri"]
categories = ["gui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"
uuid = { version = "1.18.1", features = ["v4", "fast-rng"] }
reqwest = { version = "0.13", features = ["json"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
core-foundation = "0.10"
